remove useless css and fix header stretching

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@
     top: 1%;
     margin-top: 6%;
     display: flex;
-    transition: display 1s ease;
+    //transition: display 1s ease;
     justify-content: space-between;
     background-color: lightblue;
     align-items: center;
@@ -18,6 +18,9 @@
 }
 .userPanel{
     margin-right: 1vh;
+    display: flex;
+    flex-basis: 15.5%;
+    justify-content: flex-end
 }
 *{
     font-family: monospace;
@@ -27,13 +30,14 @@
     align-items: center;
     justify-content: space-between;
     margin-left: 1%;
+    flex-basis: 15.5%;
     cursor: pointer;
 }
 .breadcrumbString{
     border: 0px solid white;
     border-radius: 10px;
     letter-spacing: 0.2vh;
-    transition: .3s ease;
+    //transition: .3s ease;
     display: flex;
     align-items: center;
     transition: letter-spacing .3s cubic-bezier(0.165, 2, 0.44, 1);
